One line of css fixed my uneven table.

--- a/src/app/components/admin/car-table/car-table.component.css
+++ b/src/app/components/admin/car-table/car-table.component.css
@@ -38,6 +38,7 @@ table > thead > tr > th {
 
 table > tbody > tr > td {
     border-top: none;
+    vertical-align: middle;
 }
 
 .newCarButton {
